--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -20,4 +20,8 @@
 {% endfor %}
 </table>
 
+<h5>Last Login: {{ last_login }}</h5>
+
+<button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
+
 {% endblock content %}
