--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,6 +1,51 @@
-{% extends 'base.html' %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
+{% extends 'base.html' %}
 {% block content %}
+
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #FF0000;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #FF1000;
+  color: white;
+}
+</style>
+
+
+<div class="topnav">
+  <a style="color: white;">Muhammad Fiqo Anugrah</a>
+  <a class="active" href="#home">Home</a>
+  <a href="{% url 'wishlist:login' %}">Login</a>
+  <a href="{% url 'wishlist:logout' %}">Logout</a>
+</div>
+
 <h5>Name: </h5>
 <b>{{name}}</b>
 
