--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,5 +1,3 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
 {% extends 'base.html' %}
 {% block content %}
@@ -29,7 +27,7 @@ body {
 
 .topnav a:hover {
   background-color: #FF0000;
-  color: black;
+  color: white;
 }
 
 .topnav a.active {
